Tue Oct 23 17:08:39 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (usage, process_options): show more info in --help.
	  [EXPREIMENTAL] [ruby-core:48072] [Bug #7184]

Tue Oct 23 14:20:43 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-electric.el using variable `last-command-event' instead of
	  obsolete `last-command-char', so that work with Emacs trunk.
	  a patch by Victor Deryagin <vderyagin AT gmail.com>.

Tue Oct 23 14:06:47 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (visibility_option): visibility attribute is not
	  available before GCC 4, so do not use -fvisibility option in that
	  case.  [ruby-core:48147] [Bug #7205]

Tue Oct 23 12:57:29 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h, vm_insnhelper.c, vm_eval.c (OPT_CALL_CFUNC_WITHOUT_FRAME):
	  add a new otpimization and its macro `OPT_CALL_CFUNC_WITHOUT_FRAME'.
	  This optimization makes all cfunc method calls `frameless', which
	  is fster than ordinal cfunc method call.
	  If `frame' is needed (for example, it calls another method with
	  `rb_funcall()'), then build a frame. In other words, this
	  optimization delays frame building. 
	  However, to delay the frame building, we need additional overheads:
	    (1) Store the last call information.
	    (2) Check the delayed frame buidling before the frame is needed.
	    (3) Overhead to build a delayed frame.
	  rb_thread_t::passed_ci is storage of delayed cfunc call information.
	  (1) is lightweight because it is only 1 assignment to `passed_ci'.
	  To achieve (2), we modify GET_THREAD() to check `passed_ci' every
	  time. It causes 10% overhead on my envrionment.
	  This optimization only works for cfunc methods which do not need
	  their `frame'.
	  After evaluation on my environment, this optimization does not
	  effective every time. Because of this evaluation results, this
	  optimization is disabled at default.

	* vm_insnhelper.c, vm.c: add VM_PROFILE* macros to measure behaviour